--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spoke",
+  "name": "spoke_staging",
   "version": "9.1.0",
   "description": "Spoke",
   "main": "src/server",
@@ -37,7 +37,7 @@
     "prod-message-sender-56": "./dev-tools/babel-run ./src/workers/message-sender-56.js",
     "dev-message-sender-789": "nodemon --signal SIGTERM -e js,jsx -w ./src --exec ./dev-tools/babel-run -- ./src/workers/message-sender-789",
     "prod-message-sender-789": "./dev-tools/babel-run ./src/workers/message-sender-789.js",
-    "dev-job-handler": "nodemon --signal SIGTERM -e js,jsx -w ./src --exec ./dev-tools/babel-run -- ./src/workers/job-handler",
+    "dev-job-handler": "nodemon --signal SIGTERM -e js,jsx -w ./src --exec ./dev-tools/babel-run-with-env.js -- ./src/workers/job-handler",
     "prod-job-handler": "./dev-tools/babel-run ./src/workers/job-handler",
     "dev-incoming-message-handler": "nodemon --signal SIGTERM -e js,jsx -w ./src --exec ./dev-tools/babel-run -- ./src/workers/incoming-message-handler",
     "prod-incoming-message-handler": "./dev-tools/babel-run ./src/workers/incoming-message-handler.js",
