--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spoke",
-  "version": "9.2.0",
+  "name": "spoke_staging",
+  "version": "9.1.0",
   "description": "Spoke",
   "main": "src/server",
   "engines": {
